# LLM-Discussions-Network-Summarization

./: .env.example  .gitignore  pyproject.toml
src/data_pipeline/: build_graphs.py  comments_extractor.py  filter.py  graph_formatter.py
src/llm/: analyze_results.py  asd.py  generator.py  test.py  train_gat.ipynb
